k8s/osdu/core/overlays/do-private/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osdu-api-public
  namespace: osdu-core
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, data-partition-id, correlation-id, Accept"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api-do-osdu.esstar.com.vn
    secretName: cf-origin-osdu-api-tls
  rules:
  - host: api-do-osdu.esstar.com.vn
    http:
      paths:
      - path: /api/partition/
        pathType: Prefix
        backend:
          service:
            name: osdu-partition
            port:
              number: 8080
      - path: /api/entitlements/
        pathType: Prefix
        backend:
          service:
            name: osdu-entitlements
            port:
              number: 8080
      - path: /api/legal/
        pathType: Prefix
        backend:
          service:
            name: osdu-legal
            port:
              number: 8080
      - path: /api/schema-service/
        pathType: Prefix
        backend:
          service:
            name: osdu-schema
            port:
              number: 8080
      - path: /api/storage/
        pathType: Prefix
        backend:
          service:
            name: osdu-storage
            port:
              number: 8080
      - path: /api/indexer/
        pathType: Prefix
        backend:
          service:
            name: osdu-indexer
            port:
              number: 8080
      - path: /api/search/
        pathType: Prefix
        backend:
          service:
            name: osdu-search
            port:
              number: 8080
      - path: /api/file/
        pathType: Prefix
        backend:
          service:
            name: osdu-file
            port:
              number: 8080
      - path: /api/notification/v1
        pathType: Prefix
        backend:
          service:
            name: osdu-notification
            port:
              number: 8080
